# opik-examples

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude/: settings.json
.claude/skills/add-dataset-items/: SKILL.md
.claude/skills/add-eval-suite-items/: SKILL.md
.claude/skills/run-evals/: SKILL.md
.claude/skills/run-optimizations/: SKILL.md
.claude/skills/scaffold-example/: SKILL.md
.claude/skills/scaffold-example/evals/: evals.json
.claude/skills/scaffold-example/scripts/: scaffold.py
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  example_proposal.yml
.github/workflows/: community-check.yml  community-index.yml  compliance.yml  e2e-tests.yml  example-compliance-check.yml  pr-examples-test.yml  pr-test.yml  scheduled-examples.yml  scheduled.yml  test-notebooks.yml  test-scripts-matrix.yml
_template/: README.md  example.py
code-snippets/trace_deletion/: README.md  delete_old_traces.py  run_examples.sh
code-snippets/trace_management/: .gitignore  README.md  config_example.json  manage_traces.py  test_manage_traces.py
code-snippets/usage_stats/: pyproject.toml
community/: CONTRIBUTING.md  README.md
community/_ci/: build_index.py  check_entry.py  entry_rules.py
community/_ci/tests/: conftest.py  test_build_index.py  test_check_entry.py  test_entry_rules.py  test_smoke.py
community/jamwithai_observable_job_agent/: README.md  meta.yaml
community/paul_iusztin_coding_agent_course/: README.md  meta.yaml
community/scripts/: build_index.py  check_entry.py  entry_rules.py  pyproject.toml
community/scripts/tests/: test_build_index.py  test_check_entry.py  test_entry_rules.py
community/templates/entry-template/: README.md  meta.yaml
examples/extracting_governance_data/: aict_data_team.py
examples/otel_with_offline_eval_example/: run_examples.sh
examples/programmatic_leaderboard_dashboard_creation/: README.md  create_leaderboard_from_yaml.py  run_examples.sh  run_experiments.py
examples/working_with_governance_data/: README.md  agent_tracing.py  data_governance_team.py  pyproject.toml  use_case_team.py  workflow.md
guides/: README.md
guides/annotation_queues_with_context/: README.md  annotation_queues_with_context.ipynb  pyproject.toml
guides/multimodal_online_evaluation/: .gitignore  README.md  multimodal_online_evaluation.ipynb  pyproject.toml
guides/prompt_versioning/: .env.example  README.md  config.py  evaluate.py  inference.py  prompts.py  pyproject.toml  run.sh  version.py
guides/tracing_finetuned_models/: README.md  pyproject.toml  tracing_finetuned_models.ipynb  train_and_register.py  use_registered_model.py
integrations/: README.md
integrations/google_adk/: .env.example  .gitignore  README.md  constant.py  index.py  main.py  requirements.txt  tools.py
integrations/google_adk/agentic_rag/: .env.example  .gitignore  README.md  index.py  main.py  pyproject.toml  run.sh  tools.py
integrations/haystack/: README.md
integrations/haystack/multi_agent_web_search/: .env.example  README.md  agent.py  config.py  pyproject.toml  run.sh  tool.py
integrations/langchain_langgraph/: .env.example  README.md  langchain_langgraph.py  pyproject.toml  run.sh
integrations/langchain_langgraph/tests/: test_langchain_langgraph.py
integrations/otel/: README.md
integrations/otel/distributed_tracing/: README.md  option_a_explicit_ids.py  option_b_w3c_propagation.py  pyproject.toml  run.sh
integrations/otel/offline_evaluation/: README.md  evaluate.py  llm_app.py  pyproject.toml  requirements.txt  run_examples.sh
integrations/pydantic_ai/: .env.example  README.md  main.py  pyproject.toml  run.sh
scripts/: README.md
scripts/automate_annotation_queue/: README.md  auto_annotate.py  pyproject.toml
scripts/leaderboard_dashboard/: README.md  create_leaderboard_from_yaml.py  pyproject.toml  requirements.txt  run_examples.sh  run_experiments.py
scripts/online_eval_rules/: .env.example  .gitignore  README.md  create_online_eval_rules.py  metric_example.py  pyproject.toml  run.sh  test_create_online_eval_rules.py
scripts/trace_management/: CLAUDE.md  README.md  manage_traces.py  pyproject.toml  test_manage_traces.py
scripts/usage_stats/: .gitignore  README.md  pyproject.toml  report.py  run_usage_stats.py  test_report.py
templates/script-template/: .env.example  .gitignore  README.md  example_script.py  pyproject.toml  run.sh
templates/use-case-template/: .env.example  .gitignore  README.md  pyproject.toml  run.sh
templates/use-case-template/data/: cases.json
templates/use-case-template/src/example_use_case/: app.py  cli.py  config.py  data.py  evaluation.py  optimization.py  prompts.py
use-cases/: README.md
use-cases/call_summarizer/: README.md  pyproject.toml
use-cases/f1_radio_rag/: .env.example  .gitignore  README.md  pyproject.toml  run.sh
use-cases/f1_radio_rag/data/: eval_cases.json  radio_messages.json
use-cases/f1_radio_rag/src/f1_radio_rag/: cli.py  config.py  data.py  evaluation.py  optimization.py  prompts.py  rag.py
use-cases/governance_observability/: .gitignore  agent_tracing.py  data_governance_team.py  pyproject.toml  run.sh  use_case_team.py
