[project]
name = "multimodal-online-evaluation"
version = "0.1.0"
description = "Run an online LLM-as-judge evaluation over multimodal (text + image) traces in Opik."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "opik>=2.0.74",
]

[dependency-groups]
dev = ["ruff"]

# WHY: notebook-only example — uv manages the env, no installable package.
[tool.uv]
package = false

[tool.ruff]
line-length = 110
target-version = "py312"
# WHY: ruff can't parse the notebook's cell schema; lint .py files only.
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
