[project]
name = "pydantic-ai-opik"
version = "0.1.0"
description = "Trace Pydantic AI agent calls to Opik with Logfire and OpenTelemetry."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "logfire[httpx]",
    "opik>=2.0",
    "pydantic-ai",
]

[project.scripts]
pydantic-ai-opik = "main:main"

[dependency-groups]
dev = [
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# WHY: single top-level module (not a src/ package) - point hatchling at the one file.
[tool.hatch.build.targets.wheel]
include = ["main.py"]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
