[project]
name = "online-eval-rules"
version = "0.1.0"
description = "Create and manage Opik online evaluation rules via the SDK and REST API, side by side."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "opik>=2.0",
    "requests>=2.31",
]

[project.scripts]
create-online-eval-rules = "create_online_eval_rules:main"

[dependency-groups]
dev = [
    "ruff",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# WHY: two top-level modules (script + sample metric), not a src/ package.
[tool.hatch.build.targets.wheel]
include = ["create_online_eval_rules.py", "metric_example.py"]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
