[project]
name = "opik-usage-stats"
version = "0.1.0"
description = "Fetch and visualise Opik workspace usage metrics"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "opik>=1.11.0",
    "pandas>=2.0",
]

[dependency-groups]
dev = ["ruff", "pytest>=8.0"]

# WHY: loose runnable script, not an installable package — uv manages the env but builds nothing.
[tool.uv]
package = false

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["report"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["."]
