[project]
name = "example-script"
version = "0.1.0"
description = "One-line description of what this script does (replace me)."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "opik>=2.0",
]

[project.scripts]
example-script = "example_script:main"

[dependency-groups]
dev = [
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# WHY: single top-level module (not a src/ package) — point hatchling at the one file.
[tool.hatch.build.targets.wheel]
include = ["example_script.py"]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
