[project]
name = "call-summarizer"
version = "0.1.0"
description = "A Streamlit app for summarizing and categorizing call transcripts using LangGraph and Opik"
authors = [{ name = "Francisco", email = "22344801+fschlz@users.noreply.github.com" }]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "streamlit>=1.32.0,<2",
    "opik>=1.7.26,<2",
    "langchain>=0.3.25,<0.4",
    "langgraph>=0.4.5,<0.5",
    "langchain-openai>=0.3.18,<0.4",
    "langchain-chroma>=0.1.1,<0.2",
    "chromadb>=0.5.0,<0.6",
    "pydantic>=2.7.0,<3",
    "python-dotenv>=1.0.1,<2",
    "python-multipart>=0.0.9,<0.0.10",
    "pyyaml>=6.0.1,<7",
    "pydantic-settings>=2.9.1,<3",
    "beautifulsoup4>=4.12.3,<5",
    "watchdog>=6.0.0,<7",
    "mcp-server-fetch>=2025.4.7,<2026",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/call_summarizer"]

[tool.ruff]
line-length = 140
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["F", "E", "W", "C90"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
