[project]
name = "f1-radio-rag"
version = "0.1.0"
description = "End-to-end Opik 2.0 demo over F1 team-radio messages: RAG (ChromaDB) -> eval dataset + test suite -> optimization studio -> prompt library, driven by a Typer CLI."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "opik>=2.0",
    "opik-optimizer",
    "chromadb",
    "litellm",
    "typer",
]

[project.scripts]
f1rag = "f1_radio_rag.cli:main"

[dependency-groups]
dev = [
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/f1_radio_rag"]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
